service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-p3
  namespace: dev
spec:
  selector:
    app: iot-p3
  ports:
    - port: 80
      name: http
      targetPort: http
      protocol: TCP
  type: ClusterIP
