ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-p3
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: app.iot-p3.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iot-p3
                port: http
